--- a/ansible/install_scanner_to_cron.yml
+++ b/ansible/install_scanner_to_cron.yml
@@ -3,19 +3,19 @@
   hosts: all
   become: no
   tasks:
-    - name: Create a directory if it does not exist
+    - name: Create directory ~/scanner if it does not exist
       file:
         path: ~/scanner
         state: directory
         mode: '0755'
 
-    - name: Transfer the scanner
+    - name: Transfer ~/scanner/scanner.sh
       copy: src=../scanner/scanner.sh dest=~/scanner/scanner.sh mode=0777
 
-    - name: Transfer the config
+    - name: Transfer ~/scanner/config.json
       copy: src=../scanner/config.json dest=~/scanner/config.json  mode=0644
 
-    - name: Set up crontab job to periodically execute scanner
+    - name: Set up crontab job to periodically execute ~/scanner/scanner.sh
       cron:
         name: "scanner.sh"
         minute: "*/5"
