--- a/ansible/remove_scanner.yml
+++ b/ansible/remove_scanner.yml
@@ -3,7 +3,7 @@
   hosts: all
   become: no
   tasks:
-    - name: Recursively remove directory
+    - name: Remove directory ~/scanner
       file:
         path: ~/scanner
         state: absent
