--- a/ansible/scan_now.yml
+++ b/ansible/scan_now.yml
@@ -3,17 +3,17 @@
   hosts: all
   become: no
   tasks:
-    - name: Create a directory if it does not exist
+    - name: Create directory ~/scanner if it does not exist
       file:
         path: ~/scanner
         state: directory
         mode: '0755'
 
-    - name: Transfer the scanner
+    - name: Transfer ~/scanner/scanner.sh
       copy: src=../scanner/scanner.sh dest=~/scanner/scanner.sh mode=0777
 
-    - name: Transfer the config
+    - name: Transfer ~/scanner/config.json
       copy: src=../scanner/config.json dest=~/scanner/config.json  mode=0644
 
-    - name: Execute the scanner with config
+    - name: Execute ~/scanner/scanner.sh
       command: bash ~/scanner/scanner.sh
